force-app/main/default/objects/Account/fields/Check_Date_1__c.field-meta.xml
<CustomField>
    <fullName>Check_Date_1__c</fullName>
    <formula>DATEVALUE( &quot;2022-04-19&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Date 1</label>
    <type>Date</type>
</CustomField>