force-app/main/default/objects/Account/fields/Check_Date_2__c.field-meta.xml
<CustomField>
    <fullName>Check_Date_2__c</fullName>
    <formula>Check_Date__c &lt; Check_Date_1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Date 2</label>
    <type>Checkbox</type>
</CustomField>