force-app/main/default/objects/Account/fields/Test_Question__c.field-meta.xml
<CustomField>
    <fullName>Test_Question__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Test Question</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>