force-app/main/default/objects/Account/fields/Url_Data__c.field-meta.xml
<CustomField>
    <fullName>Url_Data__c</fullName>
    <label>Url Data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>